[commnet] Add comments and fix to all routes to show comment setion for each model.

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,12 +2,10 @@
 <div>
     <!-- the /monster route is being guided to monster folder and shows the monsters.ejs and whats in it -->
    <p>
-  This app can provide guindance for players, and give a faster way to access
-  information they need for their items. For example, the Monster weakness and
+  This website provides guindance for players, and can give a faster way to access
+  information they need to enhance their experience. For example, the Monster's weakness and
   its items drops. Once the player clicks on the Monster it will show what the
   monster drops, and can make their judgement wether this Monster is worth their
-  time. This helpful information can also be used to see the different
-  attributes of Armor and its stats, and the same can go for the weapons. Also
-  pictures always adds the cool factor how the armor looks along with the
-  Monster they would have to face. Happy hunting they would say.
+  time. This helpful information can also be used to see the many
+  attributes of an Armor piece and its stats, and the same can go for the weapons. Happy hunting!
 </p>
