--- a/views/armor/show.ejs
+++ b/views/armor/show.ejs
@@ -57,3 +57,18 @@
     </ul>
 </div>
 
+<h3>Comments</h3>
+<% comments.forEach(comment => { %>
+<div  style="width: 20%; background: gray; color: blue;" class="well">
+  <p>Name: <%= comment.name %> </p>
+  <p><%= comment.content %></p>
+ 
+</div>
+<% }) %>
+<form method="POST" action="/armor/<%= armors.id%>">
+    <label for="name">Name</label>
+    <input style="width: 20%;" name="name" id="name" class="form-control" required>
+    <label for="content">Comment</label>
+    <textarea style="width: 40%;" type="text" name="content" id="content" class="form-control" cols="" rows="5"></textarea>
+    <input type="submit" class="btn btn-primary">
+</form>
