--- a/views/armor/show.ejs
+++ b/views/armor/show.ejs
@@ -1,5 +1,5 @@
 <a href="/armor">Back to Armor</a>
-<h1>Armor show page</h1>
+<h1 style="text-align: center;"><img src="https://fontmeme.com/permalink/200822/b81f78e885431b2a7e61ade010c6fe49.png" alt="monsters-attack-empire-of-the-claw-font"></h1>
 <h2><%= armors.name%></h2>
 <h4>Armor Type: <%= armors.type %></h4>
 
@@ -59,7 +59,7 @@
 
 <h3>Comments</h3>
 <% comments.forEach(comment => { %>
-<div  style="width: 20%; background: gray; color: blue;" class="well">
+<div  style="width: 20%; background: gray; color: blue; " class="well">
   <p>Name: <%= comment.name %> </p>
   <p><%= comment.content %></p>
  
