--- a/views/auth/signup.ejs
+++ b/views/auth/signup.ejs
@@ -10,6 +10,7 @@
 
   <input type="submit" value="Sign up">
 </form>
+<img class="homeImage" src="https://images.alphacoders.com/836/thumb-1920-83601.jpg" alt="" /> 
 
 <!-- from auth.js routes /signup -->
 <!-- set up some partials for each one of those pages to return the same flash -->
