--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,10 +1,66 @@
+<body>
+  <h1 style="text-align: center; margin-top: 50px;">
+    <img
+      src="https://fontmeme.com/permalink/200822/a5994abc5cde0a277bc5d43cdc39a2bc.png"
+      alt="monsters-attack-empire-of-the-claw-font"
+    />
+  </h1>
 
-<h1>Monster Hunter Home</h1>
-
-
-<div id="home">
-    <h1><a href="/monster">Monsters<img src="https://i.pinimg.com/236x/54/82/38/5482387937dd98440cfa845701c8ca75.jpg" alt=""></a></h1>
-    
-    <h1><a href="/weapon">Weapons <img src="https://www.1999.co.jp/itbig58/10583858.jpg" alt=""></a></h1>
-    <h1><a href="/armor">Armor <img src="https://monsterhunterworld.wiki.fextralife.com/file/Monster-Hunter-World/lavasioth_beta_armor_set_mhw_small.png" alt=""></a></h1>
-</div>
+  <div style="text-align: center;" id="home">
+    <h1>
+      <a href="/monster"
+        ><span
+          style="
+            color: rgba(240, 1, 1, 0.797);
+            text-shadow: 2px 2px rgba(5, 186, 186, 0.749);
+          "
+          >Monster</span
+        ><img
+          style="
+            padding: 10px 10px;
+            background-color: rgba(238, 237, 231, 0.934);
+            border: none;
+            border-radius: 15px;
+            box-shadow: 0 9px rgba(153, 153, 153, 0.146);
+          "
+          src="https://i.pinimg.com/236x/54/82/38/5482387937dd98440cfa845701c8ca75.jpg"
+          alt=""
+      /></a>
+    </h1>
+    <h1>
+      <a href="/armor"
+        ><span
+          style="
+            color: rgba(240, 1, 1, 0.797);
+            text-shadow: 2px 2px rgba(5, 186, 186, 0.749);
+          "
+          >Armor</span
+        >
+        <img
+          src="https://monsterhunterworld.wiki.fextralife.com/file/Monster-Hunter-World/lavasioth_beta_armor_set_mhw_small.png"
+          alt=""
+      /></a>
+    </h1>
+    <h1>
+      <a href="/weapon"
+        ><span
+          style="
+            color: rgba(240, 1, 1, 0.797);
+            text-shadow: 2px 2px rgba(5, 186, 186, 0.749);
+          "
+          >Weapons</span
+        >
+        <img
+          style="
+            width: 275px;
+            background-color: rgba(238, 237, 231, 0.536);
+            border: none;
+            border-radius: 15px;
+            box-shadow: 0 9px rgba(153, 153, 153, 0.146);
+          "
+          src="https://www.1999.co.jp/itbig58/10583858.jpg"
+          alt=""
+      /></a>
+    </h1>
+  </div>
+</body>
