--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,11 +1,14 @@
-<h2>Monster Hunter Helper 🎮</h2>
-<div>
-    <!-- the /monster route is being guided to monster folder and shows the monsters.ejs and whats in it -->
-   <p>
-  This website provides guindance for players, and can give a faster way to access
-  information they need to enhance their experience. For example, the Monster's weakness and
-  its items drops. Once the player clicks on the Monster it will show what the
-  monster drops, and can make their judgement wether this Monster is worth their
-  time. This helpful information can also be used to see the many
-  attributes of an Armor piece and its stats, and the same can go for the weapons. Happy hunting!
-</p>
+<h2 style="text-align: center;">Monster Hunter Helper</h2>
+<img class="homeImage" src="https://wallpapercave.com/wp/wp2356330.png" alt="" />
+<div class="home">
+  <p>
+    This website provides guindance for players, and can give a faster way to
+    access information they need to enhance their experience. For example, the
+    Monster's weakness and its items drops. Once the player clicks on the
+    Monster it will show what the monster drops, and can make their judgement
+    wether this Monster is worth their time. This helpful information can also
+    be used to see the many attributes of an Armor piece and its stats, and the
+    same can go for the weapons. Happy hunting!
+  </p>
+</div>
+<!-- the /monster route is being guided to monster folder and shows the monsters.ejs and whats in it -->
