--- a/views/monster/show.ejs
+++ b/views/monster/show.ejs
@@ -1,5 +1,5 @@
 <a href="/monster">Back to Monsters</a>
-<h1>Monster Page</h1>
+<h1 style="text-align: center;"><img src="https://fontmeme.com/permalink/200822/128e29483c5a90456911352519883369.png" alt="monsters-attack-empire-of-the-claw-font"></h1>
 
 <div>
   <h2><%= monsters.name%></h2>
