--- a/views/weapons/show.ejs
+++ b/views/weapons/show.ejs
@@ -1,6 +1,6 @@
 <a href="/weapon">Go Back to Weapons</a>
 
-<h1>Weapon show page. Show the details</h1>
+<h1 style="text-align: center;"><img src="https://fontmeme.com/permalink/200822/956a075f28ce0bf9d92b8a9626094e7c.png" alt="monsters-attack-empire-of-the-claw-font"></h1>
 
 <h1><%= weapons.name %></h1>
 <h3>Weapon Type: <%= weapons.type%></h3>
