--- a/views/weapons/weapons.ejs
+++ b/views/weapons/weapons.ejs
@@ -1,4 +1,4 @@
-<h1>Weapons page</h1>
+<h1 style="text-align: center;"><img src="https://fontmeme.com/permalink/200822/2815562eae1423864e91344eb8fa3687.png" alt="monsters-attack-empire-of-the-claw-font"></h1>
 
 <div>
   <% if (weapons) { %> <% weapons.forEach(w =>{%>
