--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,3 +1,4 @@
+
 #body{
   background-color: rgba(0, 0, 0, 0.906);
   color: brown;
@@ -6,6 +7,11 @@ nav ul li {
   text-decoration: none;
   display: inline-block;
   margin-right: .3em;
+}
+
+.homeImage{
+  width: 100%;
+  object-fit: cover;
 }
 
 #home{
