--- a/views/auth/login.ejs
+++ b/views/auth/login.ejs
@@ -1,9 +1,12 @@
-<form action="/auth/login" method="POST">
-  <label for="auth-email">Email</label>
-  <input id="auth-email" type="email" name="email">
-
-  <label for="auth-password">Password</label>
-  <input id="auth-password" type="password" name="password">
-
-  <input type="submit" value="Log In">
-</form>
+  <body>
+    <form action="/auth/login" method="POST">
+      <label for="auth-email">Email</label>
+    <input id="auth-email" type="email" name="email">
+  
+    <label for="auth-password">Password</label>
+    <input id="auth-password" type="password" name="password">
+    
+    <input type="submit" value="Log In">
+  </form>
+</body>
+<img class="homeImage" src="https://hdwallsource.com/img/2019/5/monster-hunter-world-iceborne-wallpaper-68453-70783-hd-wallpapers.jpg" alt="" /> 
