--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,9 +1,9 @@
-<h2 style="text-align: center;">Monster Hunter Helper</h2>
+<h2 style="text-align: center; font-family: fantasy;">Monster Hunter Helper</h2>
 <img class="homeImage" src="https://wallpapercave.com/wp/wp2356330.png" alt="" />
-<div class="home">
+<div id="home">
   <p>
-    This website provides guindance for players, and can give a faster way to
-    access information they need to enhance their experience. For example, the
+    This website aims to help provide game guindance, and gives a faster way to
+    access information MH Players needs in order to enhance their playing experience. For example, the
     Monster's weakness and its items drops. Once the player clicks on the
     Monster it will show what the monster drops, and can make their judgement
     wether this Monster is worth their time. This helpful information can also
