[user] made favorites user specific

--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -22,7 +22,7 @@
     <% include partials/alerts %>
     <header>
       <nav>
-        <ul>
+        <ul style="text-align: center;">
           <!-- if no current user show sign up and login page -->
           <% if (!currentUser) { %>
           <li><a href="/auth/signup">Signup</a></li>
