--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,7 +1,7 @@
 
 #body{
   background-color: rgba(0, 0, 0, 0.906);
-  color: aqua;
+  color: rgba(0, 255, 255, 0.653);
   background-image: url(https://slm-assets.secondlife.com/assets/16013743/original/gif_Fireflies__on_black_5x5.gif?1484133621);
   
 }
