[cloud] Add cloudinary to my profile route. want user to be able to upload a profile picture

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,7 +3,7 @@
 <div id="home">
   <p>
     This website aims to help provide game guindance, and gives a faster way to
-    access information MH Players needs in order to enhance their playing experience. For example, the
+    access information MH Players need in order to enhance their playing experience. For example, the
     Monster's weakness and its items drops. Once the player clicks on the
     Monster it will show what the monster drops, and can make their judgement
     wether this Monster is worth their time. This helpful information can also
