--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -1,6 +1,29 @@
 <h1>Welcome to your PROFILE</h1>
 
+<a href="/">New pic?</a>
+<h1>this is my pic</h1>
+<!-- edge case -->
+
+<% if (myPics.length) { %>
+    <div class="picBox">
+        <% myPics.forEach(p =>{%>
+            <div>
+                <img src="<%= p.url%>" alt="picture">
+            </div>
+       <% })%>
+    </div>
+<%} else {%>
+    <h2>sorry i dont have pic</h2>
+<% }%>
 
 
 
 
+<h1>File Upload</h1>
+<!-- when were uploading files we need to specify in form -->
+<!-- enctype="multipart/form-data" -->
+<form enctype="multipart/form-data" method="POST" action="/profile">
+  <input type="file" name="myFile" />
+  <!-- to sbumit we need something -->
+  <input type="submit" class="btn btn-primary" />
+</form>
