--- a/public/css/style.css
+++ b/public/css/style.css
@@ -5,7 +5,19 @@
   background-image: url(https://slm-assets.secondlife.com/assets/16013743/original/gif_Fireflies__on_black_5x5.gif?1484133621);
   
 }
-
+.proImage img{
+  border-radius: 25px;
+  width: 400px;
+  height: 300px;
+}
+.picBox{
+  /* display: grid; */
+  /* grid-template-columns: 1fr 1fr 1fr;
+  grid-template-rows: 1fr 1fr 1fr; */
+  /* justify-content: space-evenly; */
+  border-radius: 15px;
+  
+}
 
 #monTitles {
   color: rgb(59, 227, 44);
