--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -41,8 +41,9 @@
       </nav>
     </header>
     
+    
     <%- body %>
-
+    <script src="https://kit.fontawesome.com/5528cec054.js" crossorigin="anonymous"></script>
     <script
       src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"
       integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS"
