--- a/views/weapons/show.ejs
+++ b/views/weapons/show.ejs
@@ -1,6 +1,11 @@
 <a href="/weapon">Go Back to Weapons</a>
 
-<h1 style="text-align: center;"><img src="https://fontmeme.com/permalink/200822/956a075f28ce0bf9d92b8a9626094e7c.png" alt="monsters-attack-empire-of-the-claw-font"></h1>
+<h1 style="text-align: center;">
+  <img
+    src="https://fontmeme.com/permalink/200822/956a075f28ce0bf9d92b8a9626094e7c.png"
+    alt="monsters-attack-empire-of-the-claw-font"
+  />
+</h1>
 
 <h1 id="wepTitles" style="text-align: center;"><%= weapons.name %></h1>
 <h3 id="wepTitles">Weapon Type: <%= weapons.type%></h3>
@@ -93,16 +98,47 @@
 <h3 id="wepTitles">Comments</h3>
 <!-- didnt need weapons cuz passed in comments -->
 <% comments.forEach(comment => { %>
-<div  style="width: 20%; background: transparent; color: blue;" class="well">
-    <p><span style="color: rgb(59, 227, 44) ;">Name:</span> <%= comment.name %> </p>
+  <div style="width: 20%; background: transparent; color: blue;" class="well">
+    <p><span style="color: rgb(59, 227, 44);">Name:</span> <%= comment.name %></p>
     <p style="color: yellow;"><%= comment.content %></p>
+        <div id="container">
+          <i onclick="Toggle()" id="btn" class="far fa-heart"></i>
+        </div>
 </div>
 <% }) %>
-
+<script>
+  let btn = document.getElementById('btn');
+  function Toggle(){
+    if(btn.classList.contains ("far") ){
+      btn.classList.remove("far")
+      btn.classList.add("fas")
+    }else{
+      btn.classList.remove("fas")
+      btn.classList.add("far")
+    }
+  }
+</script>
 <form method="POST" action="/weapon/<%= weapons.id %>">
-  <label for="name"><span style="color: rgb(59, 227, 44) ;">Name</span></label>
-  <input style="width: 20%; background: transparent;" name="name" id="name" class="form-control" required /><br />
-  <label for="content"><span style="color: rgb(215, 227, 44) ;">Comment</span></label>
-  <textarea style="width: 40%; background: transparent;" type="text" class="form-control" id="content" name="content" cols="0" rows="5" required></textarea>
+  <label for="name"><span style="color: rgb(59, 227, 44);">Name</span></label>
+  <input
+    style="width: 20%; background: transparent;"
+    name="name"
+    id="name"
+    class="form-control"
+    required
+  /><br />
+  <label for="content"
+    ><span style="color: rgb(215, 227, 44);">Comment</span></label
+  >
+  <textarea
+    style="width: 40%; background: transparent;"
+    type="text"
+    class="form-control"
+    id="content"
+    name="content"
+    cols="0"
+    rows="5"
+    required
+  ></textarea>
   <input type="submit" class="btn btn-primary" />
 </form>
